<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_details"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="667dp"
        android:padding="8dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_park_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_park_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/details_viewpager"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

            </androidx.viewpager2.widget.ViewPager2>

            <TextView
                android:id="@+id/description_text"
                style="@style/static_description"
                android:text="@string/description" />

            <TextView
                android:id="@+id/details_description"
                style="@style/dynamic_description"
                android:text="@string/default_text" />

            <TextView
                style="@style/static_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities" />

            <TextView
                android:id="@+id/details_activities"
                style="@style/dynamic_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/textView5"
                style="@style/static_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topics" />

            <TextView
                android:id="@+id/details_topics"
                style="@style/dynamic_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/textView7"
                style="@style/static_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrance_fees" />

            <TextView
                android:id="@+id/details_entrance_fees"
                style="@style/dynamic_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/textView9"
                style="@style/static_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operating_hours" />

            <TextView
                android:id="@+id/details_operating_hours"
                style="@style/dynamic_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/textView11"
                style="@style/static_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directions" />

            <TextView
                android:id="@+id/details_directions"
                style="@style/dynamic_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>